--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Jim Motyl - https://github.com/jxmot"/>
+    <meta name="description" content="A non-Bootstrap Web Site Template - https://github.com/jxmot/website_template-no_bootstrap"/>
     <title>NO BS!</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
