--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" href="./favicon.ico">
     <link rel="manifest" href="./site.webmanifest">
     <link rel="stylesheet" href="./assets/css/nobs.css">
+    <link rel="stylesheet" href="./assets/css/totop.css"/>
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -169,7 +170,10 @@
     <!-- Page footer -->
     <footer id="page-footer" class="footer">
         <h3 class="footer-text">footer</h3>
+        <!-- kept in the footer to keep it anchored -->
+        <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">&#9650;</button>
     </footer>
     <script src="./assets/js/nobs.js"></script>
+    <script src="./assets/js/totop.js"></script>
 </body>
 </html>
