--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Jim Motyl - https://github.com/jxmot"/>
-    <meta name="description" content="A non-Bootstrap Web Site Template - https://github.com/jxmot/website_template-no_bootstrap"/>
+    <meta name="description" content="A non-Bootstrap Web Site Template - https://github.com/jxmot/website_template-no_bootstrap#readme"/>
     <title>NO BS!</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
@@ -173,6 +173,7 @@
         <!-- kept in the footer to keep it anchored -->
         <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">&#9650;</button>
     </footer>
+    <!-- Stuff that makes it work :) -->
     <script src="./assets/js/nobs.js"></script>
     <script src="./assets/js/totop.js"></script>
 </body>
