moved logo image path into nobs.css:.logo-img

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,7 +21,7 @@
         <!-- Logo, reloads the page. -->
         <!-- <a id="nav-logo_link" class="nav-logo" href="./index.html">NOBS</a> -->
         <a id="nav-logo_link" class="nav-logo-img" href="./index.html">
-            <img class="logo-img" src="./no_bootstrap.png">
+            <img class="logo-img">
         </a>
         <!-- Hamburger Icon 
         -->
