--- a/public_html/index.html
+++ b/public_html/index.html
@@ -23,8 +23,7 @@
         <a id="nav-logo_link" class="nav-logo-img" href="./index.html">
             <img class="logo-img">
         </a>
-        <!-- Hamburger Icon 
-        -->
+        <!-- Hamburger Icon -->
         <input id="nav-togg" type="checkbox"/>
         <label id="nav-close" class="nav-icon" for="nav-togg">
             <span class="nav-icon-line"></span>
