first pass at logo removal, success

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,9 +20,12 @@
     <header id="nav-header" class="nav-header">
         <!-- Logo, reloads the page. -->
         <!-- <a id="nav-logo_link" class="nav-logo" href="./index.html">NOBS</a> -->
+<!--
+check for presence, if none then adjust CSS on elements
         <a id="nav-logo_link" class="nav-logo-img" href="./index.html">
-            <img class="logo-img">
+            <img id="logo-img" class="logo-img">
         </a>
+-->
         <!-- Hamburger Icon -->
         <input id="nav-togg" type="checkbox"/>
         <label id="nav-close" class="nav-icon" for="nav-togg">
