--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,7 +14,7 @@
 
     <!-- color palettes -->
     <link rel="stylesheet" href="./assets/css/nobs-palettes.css">
-    <!-- "themes", edit as needed -->
+    <!-- "themes", choose & edit as needed -->
     <link rel="stylesheet" href="./assets/css/nobs-default.css">
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_1.css"> -->
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_2.css"> -->
@@ -22,7 +22,7 @@
     <!-- <link rel="stylesheet" href="./assets/css/nobs-alt_4.css"> -->
     <!-- the rest of it... -->
     <link rel="stylesheet" href="./assets/css/nobs.css">
-    <link rel="stylesheet" href="./assets/css/totop.css"/>
+    <link rel="stylesheet" href="./assets/css/nobs-totop.css"/>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
