added nobs-gallery.css, and a CSS grid of images

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="./assets/css/nobs.css">
     <link rel="stylesheet" href="./assets/css/nobs-totop.css"/>
 
+    <link rel="stylesheet" href="./assets/css/nobs-gallery.css"/>
+
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -83,7 +85,36 @@
                 <p>test</p>
                 <p>test</p>
                 <p>test</p>
+                <br>
                 <p id="navtarg1"><h2>Gallery</h2></p>
+                <br>
+                <!-- https://picsum.photos/ -->
+                <div class="gallery">
+                    <div class="grid-img-cell">
+                        <img src="https://picsum.photos/seed/1234/200/300">
+                        <div class="text-overimg">seed/1234</div>
+                    </div>
+                    <div class="grid-img-cell">
+                        <img src="https://picsum.photos/seed/5678/200/300">
+                        <div class="text-overimg">seed/5678</div>
+                    </div>
+                    <div class="grid-img-cell">
+                        <img src="https://picsum.photos/seed/8765/200/300">
+                        <div class="text-overimg">seed/8765</div>
+                    </div>
+                    <div class="grid-img-cell">
+                        <img src="https://picsum.photos/seed/4321/200/300">
+                        <div class="text-overimg">seed/4321</div>
+                    </div>
+                    <div class="grid-img-cell">
+                        <img src="https://picsum.photos/seed/0000/200/300">
+                        <div class="text-overimg">seed/0000</div>
+                    </div>
+                    <div class="grid-img-cell">
+                        <img src="https://picsum.photos/seed/test/200/300">
+                        <div class="text-overimg">seed/test</div>
+                    </div>
+                </div>
                 <p>test</p>
                 <p>test</p>
                 <p>test</p>
