using reseter.css, added gallery-img to gallery imgs, minor changes

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,8 +12,7 @@
     <link rel="icon" href="./favicon.ico">
     <link rel="manifest" href="./site.webmanifest">
 
-    <!-- <link rel="stylesheet" href="./assets/css/reset.css"> -->
-    <!-- <link rel="stylesheet" href="./assets/css/normalize.css"> -->
+    <link rel="stylesheet" href="./assets/css/reseter.css">
     <!-- color palettes -->
     <link rel="stylesheet" href="./assets/css/nobs-palettes.css">
     <!-- "themes", choose & edit as needed -->
@@ -80,39 +79,40 @@
                 <p>
                     Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
                 </p>
-                <br>
             </div>
             <div>
                 <p id="navtarg1"><h2>Gallery</h2></p>
-                <br>
                 <!-- https://picsum.photos/ -->
                 <div class="gallery">
                     <div class="grid-img-cell">
-                        <img src="https://picsum.photos/seed/1234/200/300">
-                        <div class="text-overimg">seed/1234</div>
+                        <img class="gallery-img" src="https://picsum.photos/seed/1234/200/300">
+                        <div class="text-overimg">1st</div>
                     </div>
                     <div class="grid-img-cell">
-                        <img src="https://picsum.photos/seed/5678/200/300">
-                        <div class="text-overimg">seed/5678</div>
+                        <img class="gallery-img" src="https://picsum.photos/seed/5678/200/300">
+                        <div class="text-overimg">2nd</div>
                     </div>
                     <div class="grid-img-cell">
-                        <img src="https://picsum.photos/seed/8765/200/300">
-                        <div class="text-overimg">seed/8765</div>
+                        <img class="gallery-img" src="https://picsum.photos/seed/8765/200/300">
+                        <div class="text-overimg">3rd</div>
                     </div>
                     <div class="grid-img-cell">
-                        <img src="https://picsum.photos/seed/4321/200/300">
-                        <div class="text-overimg">seed/4321</div>
+                        <img class="gallery-img" src="https://picsum.photos/seed/4321/200/300">
+                        <div class="text-overimg">4th</div>
                     </div>
                     <div class="grid-img-cell">
-                        <img src="https://picsum.photos/seed/0000/200/300">
-                        <div class="text-overimg">seed/0000</div>
+                        <img class="gallery-img" src="https://picsum.photos/seed/0000/200/300">
+                        <div class="text-overimg">5th</div>
                     </div>
                     <div class="grid-img-cell">
-                        <img src="https://picsum.photos/seed/test/200/300">
-                        <div class="text-overimg">seed/test</div>
+                        <img class="gallery-img" src="https://picsum.photos/seed/test/200/300">
+                        <div class="text-overimg">6th</div>
+                    </div>
+                    <div class="grid-img-cell">
+                        <img class="gallery-img" src="https://picsum.photos/seed/test/200/300">
+                        <div class="text-overimg">7th</div>
                     </div>
                 </div>
-                <br>
                 <p>
                     Bacon ipsum dolor amet tail turkey fugiat, culpa boudin qui shoulder minim ad laboris tempor ea burgdoggen. Fugiat kielbasa pancetta, frankfurter occaecat kevin et chuck biltong turkey anim meatloaf ea short loin. Capicola laboris minim esse, anim ullamco incididunt tail buffalo burgdoggen landjaeger. Venison boudin veniam cillum, nulla tempor eiusmod excepteur flank. Nostrud frankfurter dolore pork loin, sausage ex porchetta fatback. Swine hamburger fugiat eu. Velit reprehenderit culpa non corned beef consectetur sint pancetta salami shoulder meatloaf ut cupim.
                 </p>
