very minor changes

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <link rel="icon" href="./favicon.ico">
     <link rel="manifest" href="./site.webmanifest">
-
+    <!-- CSS reset (slightly modified by me) -->
     <link rel="stylesheet" href="./assets/css/reseter.css">
     <!-- color palettes -->
     <link rel="stylesheet" href="./assets/css/nobs-palettes.css">
@@ -81,7 +81,7 @@
                 </p>
             </div>
             <div>
-                <p id="navtarg1"><h2>Gallery</h2></p>
+                <h2 id="navtarg1">Gallery</h2>
                 <!-- https://picsum.photos/ -->
                 <div class="gallery">
                     <div class="grid-img-cell">
@@ -124,52 +124,17 @@
                 </p>
             </div>
             <div>
-                <p id="navtarg2"><h2>Blog</h2></p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p id="navtarg3"><h2>About</h2></p>
+                <h2 id="navtarg2">Blog</h2>
+                <p>
+                    Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
+                </p>
+                <p>
+                    Consequat magna sunt, id turkey picanha reprehenderit. Nostrud eu in pastrami sausage aliquip tail magna aute chuck. Sirloin fugiat tongue, beef proident ham hock in picanha ad cupim aute adipisicing andouille. Magna laborum laboris, deserunt fugiat drumstick cow dolore eiusmod non bresaola swine fatback rump. Tempor rump prosciutto, tenderloin consectetur biltong turducken chicken leberkas alcatra dolor elit eiusmod meatloaf aliqua. Ground round shoulder et ullamco ad labore cillum tail chicken pork chop excepteur pancetta nisi.
+                </p>
+                <p>
+                    Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
+                </p>
+                <h2 id="navtarg3">About</h2>
                 <p>test</p>
                 <p>test</p>
                 <p>test</p>
