--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <!-- Navigation Bar -->
-    <header id="nav-header" class="nav-header">
+    <div id="nav-header" class="nav-header">
         <!-- Logo, reloads the page. -->
         <div id="nav-logo-choice_text" style="display:none;">
             <a id="nav-logo_link" class="nav-logo" href="./index.html">
@@ -51,129 +51,138 @@
         <!-- Menu -->
         <nav id="nav-menu" class="nav">
             <ul class="menu">
-                <li><a id="home" class="navitem" href="#main">Home</a></li>
+                <li><a id="home" class="navitem" href="#home">Home</a></li>
                 <li><a id="nav1" class="navitem" href="#navtarg1">Gallery</a></li>
                 <li><a id="nav2" class="navitem" href="#navtarg2">Blog</a> </li>
-                <li><a id="nav3" class="navitem" href="#navtarg3">About</a></li>
+                <li><a id="nav3" class="navitem" href="#navtarg3">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </div>
     <!-- Primary Content -->
-    <main id="main" class="main-content">
-        <article class="article-body">
+    <div id="main" class="main-content">
+        <div class="home-bg">
+        <div class="home-bg-overlay">
+        <section id="home" class="section-body home-body">
             <h2 class="main-heading-title">A Working Nav-Menu</h2>
             <p class="main-heading-text">Ready for use! NO BOOTSTRAP!!!</p>
-            <div>
-                <p>
-                    Spicy jalapeno bacon ipsum dolor amet magna pork chop turducken occaecat consequat. Et pig velit buffalo. Boudin eu bresaola proident sirloin pancetta in esse leberkas irure jerky. Cow quis occaecat, consectetur chicken qui ut.
-                </p>
-                <p>
-                    Non consequat t-bone, ham hock kevin doner pork chop pig flank. Kielbasa adipisicing tri-tip, pancetta irure occaecat dolore chislic rump. T-bone tenderloin ut laboris consequat esse, meatloaf in sint bacon quis ground round. Corned beef irure ut tenderloin cupim anim laborum. Ex sed kevin pork chop ut incididunt beef ribs dolore commodo cow id.
-                </p>
-                <p>
-                    Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
-                </p>
-                <p>
-                    Consequat magna sunt, id turkey picanha reprehenderit. Nostrud eu in pastrami sausage aliquip tail magna aute chuck. Sirloin fugiat tongue, beef proident ham hock in picanha ad cupim aute adipisicing andouille. Magna laborum laboris, deserunt fugiat drumstick cow dolore eiusmod non bresaola swine fatback rump. Tempor rump prosciutto, tenderloin consectetur biltong turducken chicken leberkas alcatra dolor elit eiusmod meatloaf aliqua. Ground round shoulder et ullamco ad labore cillum tail chicken pork chop excepteur pancetta nisi.
-                </p>
-                <p>
-                    Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
-                </p>
+            <p>
+                Spicy jalapeno bacon ipsum dolor amet magna pork chop turducken occaecat consequat. Et pig velit buffalo. Boudin eu bresaola proident sirloin pancetta in esse leberkas irure jerky. Cow quis occaecat, consectetur chicken qui ut.
+            </p>
+            <p>
+                Non consequat t-bone, ham hock kevin doner pork chop pig flank. Kielbasa adipisicing tri-tip, pancetta irure occaecat dolore chislic rump. T-bone tenderloin ut laboris consequat esse, meatloaf in sint bacon quis ground round. Corned beef irure ut tenderloin cupim anim laborum. Ex sed kevin pork chop ut incididunt beef ribs dolore commodo cow id.
+            </p>
+            <p>
+                Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
+            </p>
+            <p>
+                Consequat magna sunt, id turkey picanha reprehenderit. Nostrud eu in pastrami sausage aliquip tail magna aute chuck. Sirloin fugiat tongue, beef proident ham hock in picanha ad cupim aute adipisicing andouille. Magna laborum laboris, deserunt fugiat drumstick cow dolore eiusmod non bresaola swine fatback rump. Tempor rump prosciutto, tenderloin consectetur biltong turducken chicken leberkas alcatra dolor elit eiusmod meatloaf aliqua. Ground round shoulder et ullamco ad labore cillum tail chicken pork chop excepteur pancetta nisi.
+            </p>
+            <p>
+                Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
+            </p>
+        </section>
+        </div>
+        </div>
+        <section id="navtarg1" class="section-body">
+            <h2>Gallery</h2>
+            <!-- https://picsum.photos/ -->
+            <div class="gallery">
+                <div class="grid-img-cell">
+                    <img class="gallery-img" src="https://picsum.photos/seed/1234/200/300">
+                    <div class="text-overimg">1st</div>
+                </div>
+                <div class="grid-img-cell">
+                    <img class="gallery-img" src="https://picsum.photos/seed/5678/200/300">
+                    <div class="text-overimg">2nd</div>
+                </div>
+                <div class="grid-img-cell">
+                    <img class="gallery-img" src="https://picsum.photos/seed/8765/200/300">
+                    <div class="text-overimg">3rd</div>
+                </div>
+                <div class="grid-img-cell">
+                    <img class="gallery-img" src="https://picsum.photos/seed/4321/200/300">
+                    <div class="text-overimg">4th</div>
+                </div>
+                <div class="grid-img-cell">
+                    <img class="gallery-img" src="https://picsum.photos/seed/0000/200/300">
+                    <div class="text-overimg">5th</div>
+                </div>
+                <div class="grid-img-cell">
+                    <img class="gallery-img" src="https://picsum.photos/seed/test/200/300">
+                    <div class="text-overimg">6th</div>
+                </div>
+                <div class="grid-img-cell">
+                    <img class="gallery-img" src="https://picsum.photos/seed/test/200/300">
+                    <div class="text-overimg">7th</div>
+                </div>
             </div>
-            <div>
-                <h2 id="navtarg1">Gallery</h2>
-                <!-- https://picsum.photos/ -->
-                <div class="gallery">
-                    <div class="grid-img-cell">
-                        <img class="gallery-img" src="https://picsum.photos/seed/1234/200/300">
-                        <div class="text-overimg">1st</div>
+            <p>
+                Bacon ipsum dolor amet tail turkey fugiat, culpa boudin qui shoulder minim ad laboris tempor ea burgdoggen. Fugiat kielbasa pancetta, frankfurter occaecat kevin et chuck biltong turkey anim meatloaf ea short loin. Capicola laboris minim esse, anim ullamco incididunt tail buffalo burgdoggen landjaeger. Venison boudin veniam cillum, nulla tempor eiusmod excepteur flank. Nostrud frankfurter dolore pork loin, sausage ex porchetta fatback. Swine hamburger fugiat eu. Velit reprehenderit culpa non corned beef consectetur sint pancetta salami shoulder meatloaf ut cupim.
+            </p>
+            <p>
+                Mollit qui nulla deserunt, irure dolor dolore. Consectetur boudin laborum biltong, aliqua est pig flank t-bone ham pastrami id veniam. Meatloaf tail brisket, aliqua bresaola sint picanha turducken labore pork belly do porchetta eiusmod shankle laborum. Nostrud buffalo consequat ut. Pariatur non capicola occaecat, anim bresaola jerky chicken in officia flank aliquip ipsum et. Magna cupidatat minim, pork belly pig sint tongue dolore eu commodo ham sirloin sed meatloaf proident.
+            </p>
+            <p>
+                Pork belly exercitation rump consectetur drumstick. Culpa laborum non tenderloin fatback cillum drumstick. Ham hock quis prosciutto nulla elit jowl et reprehenderit kielbasa turducken jerky frankfurter brisket burgdoggen bresaola. Shank est quis meatloaf in reprehenderit eiusmod venison brisket duis enim pork belly ipsum excepteur. Meatloaf t-bone porchetta esse. Frankfurter eiusmod occaecat et minim prosciutto in sirloin drumstick dolore turducken salami aliquip tongue in.
+            </p>
+        </section>
+        <section id="navtarg2" class="section-body">
+            <h2>Blog</h2>
+            <p>
+                Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
+            </p>
+            <p>
+                Consequat magna sunt, id turkey picanha reprehenderit. Nostrud eu in pastrami sausage aliquip tail magna aute chuck. Sirloin fugiat tongue, beef proident ham hock in picanha ad cupim aute adipisicing andouille. Magna laborum laboris, deserunt fugiat drumstick cow dolore eiusmod non bresaola swine fatback rump. Tempor rump prosciutto, tenderloin consectetur biltong turducken chicken leberkas alcatra dolor elit eiusmod meatloaf aliqua. Ground round shoulder et ullamco ad labore cillum tail chicken pork chop excepteur pancetta nisi.
+            </p>
+            <p>
+                Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
+            </p>
+        </section>
+        <section id="navtarg3" class="section-body">
+            <h2>Contact</h2>
+<!--
+            <form class="contact-form">
+
+                <div class="contact-grid-1">
+                    <div>
+                        <label for="name">Name</label>
+                        <input id="name" type="text"/>
                     </div>
-                    <div class="grid-img-cell">
-                        <img class="gallery-img" src="https://picsum.photos/seed/5678/200/300">
-                        <div class="text-overimg">2nd</div>
-                    </div>
-                    <div class="grid-img-cell">
-                        <img class="gallery-img" src="https://picsum.photos/seed/8765/200/300">
-                        <div class="text-overimg">3rd</div>
-                    </div>
-                    <div class="grid-img-cell">
-                        <img class="gallery-img" src="https://picsum.photos/seed/4321/200/300">
-                        <div class="text-overimg">4th</div>
-                    </div>
-                    <div class="grid-img-cell">
-                        <img class="gallery-img" src="https://picsum.photos/seed/0000/200/300">
-                        <div class="text-overimg">5th</div>
-                    </div>
-                    <div class="grid-img-cell">
-                        <img class="gallery-img" src="https://picsum.photos/seed/test/200/300">
-                        <div class="text-overimg">6th</div>
-                    </div>
-                    <div class="grid-img-cell">
-                        <img class="gallery-img" src="https://picsum.photos/seed/test/200/300">
-                        <div class="text-overimg">7th</div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input id="email" type="email"/>
                     </div>
                 </div>
-                <p>
-                    Bacon ipsum dolor amet tail turkey fugiat, culpa boudin qui shoulder minim ad laboris tempor ea burgdoggen. Fugiat kielbasa pancetta, frankfurter occaecat kevin et chuck biltong turkey anim meatloaf ea short loin. Capicola laboris minim esse, anim ullamco incididunt tail buffalo burgdoggen landjaeger. Venison boudin veniam cillum, nulla tempor eiusmod excepteur flank. Nostrud frankfurter dolore pork loin, sausage ex porchetta fatback. Swine hamburger fugiat eu. Velit reprehenderit culpa non corned beef consectetur sint pancetta salami shoulder meatloaf ut cupim.
-                </p>
-                <p>
-                    Mollit qui nulla deserunt, irure dolor dolore. Consectetur boudin laborum biltong, aliqua est pig flank t-bone ham pastrami id veniam. Meatloaf tail brisket, aliqua bresaola sint picanha turducken labore pork belly do porchetta eiusmod shankle laborum. Nostrud buffalo consequat ut. Pariatur non capicola occaecat, anim bresaola jerky chicken in officia flank aliquip ipsum et. Magna cupidatat minim, pork belly pig sint tongue dolore eu commodo ham sirloin sed meatloaf proident.
-                </p>
-                <p>
-                    Pork belly exercitation rump consectetur drumstick. Culpa laborum non tenderloin fatback cillum drumstick. Ham hock quis prosciutto nulla elit jowl et reprehenderit kielbasa turducken jerky frankfurter brisket burgdoggen bresaola. Shank est quis meatloaf in reprehenderit eiusmod venison brisket duis enim pork belly ipsum excepteur. Meatloaf t-bone porchetta esse. Frankfurter eiusmod occaecat et minim prosciutto in sirloin drumstick dolore turducken salami aliquip tongue in.
-                </p>
-            </div>
-            <div>
-                <h2 id="navtarg2">Blog</h2>
-                <p>
-                    Biltong do reprehenderit et mollit porchetta officia drumstick, t-bone pariatur exercitation nulla nostrud. Aliqua ea ut aliquip tongue nisi. Dolore magna elit ball tip doner qui ribeye culpa proident leberkas short loin. Chuck dolor ut excepteur, eiusmod brisket esse eu ham hock veniam ea kielbasa ball tip meatball bacon.
-                </p>
-                <p>
-                    Consequat magna sunt, id turkey picanha reprehenderit. Nostrud eu in pastrami sausage aliquip tail magna aute chuck. Sirloin fugiat tongue, beef proident ham hock in picanha ad cupim aute adipisicing andouille. Magna laborum laboris, deserunt fugiat drumstick cow dolore eiusmod non bresaola swine fatback rump. Tempor rump prosciutto, tenderloin consectetur biltong turducken chicken leberkas alcatra dolor elit eiusmod meatloaf aliqua. Ground round shoulder et ullamco ad labore cillum tail chicken pork chop excepteur pancetta nisi.
-                </p>
-                <p>
-                    Turkey swine short loin consequat fugiat pork loin, voluptate pig doner incididunt cupim cupidatat sed culpa shank. Sausage sed drumstick chislic dolore burgdoggen. Beef ribs pastrami deserunt, laborum elit hamburger cupim est esse in shankle cillum consectetur aliquip in. Alcatra swine qui laborum spare ribs, chicken pig consequat short ribs brisket.
-                </p>
-                <h2 id="navtarg3">About</h2>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test</p>
-                <p>test1</p>
-                <p>test2</p>
-                <p>test3</p>
-                <p>test4</p>
-                <p>test5</p>
-                <p>test6</p>
-                <p>test7</p>
-                <p>test8</p>
-                <p>test9</p>
-                <p>test0</p>
-            </div>
-        </article>
-    </main>
+
+                <div class="contact-grid-2">
+                    <div class="contact-grid-2-span">
+                        <label for="message">Message</label>
+                        <textarea id="message" rows="3" maxlength="160"></textarea>
+                    </div>
+                    <div class="contact-grid-2-span">
+                        <span id="textcount" class="textcount"></span>
+                    </div>
+                </div>
+
+                <div class="contact-grid-3">
+                    <div>
+                        <input type="checkbox" id="newsletter"/>
+                        <label for="newsletter">Receive our newsletter?</label>
+                    </div>
+                </div>
+
+                <div class="contact-grid-2">
+                    <div class="contact-grid-2-span">
+                        <button class="contact-button" type="submit">Send Response</button>
+                    </div>
+                    <div class="contact-grid-2-span">
+                        <button class="contact-button" type="reset">Clear Form</button>
+                    </div>
+                </div>
+            </form>
+-->
+        </section>
+    </div>
     <!-- Page footer -->
     <footer id="page-footer" class="footer">
         <h3 class="footer-text">footer</h3>
