--- a/public_html/index.html
+++ b/public_html/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="./assets/css/nobs-totop.css"/>
 
     <link rel="stylesheet" href="./assets/css/nobs-gallery.css"/>
+    <link rel="stylesheet" href="./assets/css/nobs-contact.css"/>
 
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </head>
@@ -139,48 +140,50 @@
             </p>
         </section>
         <section id="navtarg3" class="section-body">
-            <h2>Contact</h2>
-<!--
-            <form class="contact-form">
-
-                <div class="contact-grid-1">
-                    <div>
-                        <label for="name">Name</label>
-                        <input id="name" type="text"/>
+            <!-- <h2>Contact</h2> -->
+            <div class="contact-container">
+                <div class="contact-form-wrapper">
+                    <div class="contact-info">
+                        <h3>Our Contact Info:</h3>
+                        <ul>
+                            <li>ACME Inc.</li>
+                            <li>1234 W. Anystreet</li>
+                            <li>Sometown, IL 000000</li>
+                            <li>1-888-555-0000</li>
+                            <li>mail@mail.com</li>
+                        </ul>
                     </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input id="email" type="email"/>
+                    <div class="contact-form">
+                        <h3>Send us a message</h3>
+                        <form class="contact-form-body" action="">
+                            <p>
+                                <label for="">Your name</label>
+                                <input type="text">
+                            </p>
+                            <p>
+                                <label for="">Skype</label>
+                                <input type="text">
+                            </p>
+                            <p>
+                                <label for="">Email Address</label>
+                                <input type="text">
+                            </p>
+                            <p>
+                                <label for="">Topic</label>
+                                <input type="text">
+                            </p>
+                            <p class="full-width">
+                                <label for="">Write your message</label>
+                                <textarea id="" name="" cols="30" rows="7" style="resize: none;"></textarea>
+                            </p>
+                            <p class="full-width">
+                                <button>Send</button>
+                            </p>
+                        </form>
                     </div>
                 </div>
+            </div>
 
-                <div class="contact-grid-2">
-                    <div class="contact-grid-2-span">
-                        <label for="message">Message</label>
-                        <textarea id="message" rows="3" maxlength="160"></textarea>
-                    </div>
-                    <div class="contact-grid-2-span">
-                        <span id="textcount" class="textcount"></span>
-                    </div>
-                </div>
-
-                <div class="contact-grid-3">
-                    <div>
-                        <input type="checkbox" id="newsletter"/>
-                        <label for="newsletter">Receive our newsletter?</label>
-                    </div>
-                </div>
-
-                <div class="contact-grid-2">
-                    <div class="contact-grid-2-span">
-                        <button class="contact-button" type="submit">Send Response</button>
-                    </div>
-                    <div class="contact-grid-2-span">
-                        <button class="contact-button" type="reset">Clear Form</button>
-                    </div>
-                </div>
-            </form>
--->
         </section>
     </div>
     <!-- Page footer -->
