--- a/public_html/index.html
+++ b/public_html/index.html
@@ -195,6 +195,7 @@
     <!-- Stuff that makes it work :) -->
     <script src="./assets/js/logo.js"></script>
     <script src="./assets/js/nobs.js"></script>
+    <script src="./assets/js/nobs-contact.js"></script>
     <script src="./assets/js/totop.js"></script>
 </body>
 </html>
