--- a/public_html/index.html
+++ b/public_html/index.html
@@ -140,7 +140,14 @@
             </p>
         </section>
         <section id="navtarg3" class="section-body">
-            <!-- <h2>Contact</h2> -->
+            <h2>Contact</h2>
+<!--
+    This form and CSS(nobs-contact.css) was originally found at:
+        https://webdesign.tutsplus.com/tutorials/how-to-build-web-form-layouts-with-css-grid--cms-28776
+
+    Extensively Modified By: 
+        https://github.com/jxmot
+-->
             <div class="contact-container">
                 <div class="contact-form-wrapper">
                     <div class="contact-info">
@@ -155,26 +162,21 @@
                     </div>
                     <div class="contact-form">
                         <h3>Send us a message</h3>
-                        <form class="contact-form-body" action="">
+                        <form class="contact-form-body" action="#" onsubmit="return submitForm(this);">
                             <p>
-                                <label for="">Your name</label>
-                                <input type="text">
+                                <label for="">Name</label>
+                                <input id="name" type="text">
                             </p>
                             <p>
-                                <label for="">Skype</label>
-                                <input type="text">
-                            </p>
-                            <p>
-                                <label for="">Email Address</label>
-                                <input type="text">
-                            </p>
-                            <p>
-                                <label for="">Topic</label>
-                                <input type="text">
+                                <label for="">Email</label>
+                                <input id="email" type="text">
                             </p>
                             <p class="full-width">
                                 <label for="">Write your message</label>
-                                <textarea id="" name="" cols="30" rows="7" style="resize: none;"></textarea>
+                                <textarea id="message" name="" cols="30" rows="7" maxlength="160" style="resize: none;"></textarea>
+                            </p>
+                            <p>
+                                <span id="textcount" class="textcount"></span>
                             </p>
                             <p class="full-width">
                                 <button>Send</button>
@@ -183,7 +185,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
     </div>
     <!-- Page footer -->
