--- a/public_html/index.html
+++ b/public_html/index.html
@@ -24,7 +24,7 @@
     <!-- the rest of it... -->
     <link rel="stylesheet" href="./assets/css/nobs.css">
     <link rel="stylesheet" href="./assets/css/nobs-totop.css"/>
-
+    <!-- stuff that uses the CSS grid -->
     <link rel="stylesheet" href="./assets/css/nobs-gallery.css"/>
     <link rel="stylesheet" href="./assets/css/nobs-contact.css"/>
 
