added <meta> to control caching (does not seem to have an effect)

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Jim Motyl - https://github.com/jxmot"/>
     <meta name="description" content="A non-Bootstrap Web Site Template - https://github.com/jxmot/website_template-no_bootstrap#readme"/>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>NO BS!</title>
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
