modified footer to contain a link

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -192,7 +192,7 @@
     </div>
     <!-- Page footer -->
     <footer id="page-footer" class="footer">
-        <h3 class="footer-text">footer</h3>
+        <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github/jxmot</a></h3>
         <!-- kept in the footer to keep it anchored -->
         <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">&#9650;</button>
     </footer>
