--- a/public_html/index.html
+++ b/public_html/index.html
@@ -193,7 +193,7 @@
     <!-- Page footer -->
     <footer id="page-footer" class="footer">
         <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github/jxmot</a></h3>
-        <!-- kept in the footer to keep it anchored -->
+        <!-- kept in the footer to keep it anchored via CSS -->
         <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">&#9650;</button>
     </footer>
     <!-- Stuff that makes it work :) -->
