--- a/public_html/index.html
+++ b/public_html/index.html
@@ -89,6 +89,9 @@
         </div>
         <section id="navtarg1" class="section-body">
             <h2>Gallery</h2>
+            <p>
+                This was created using CSS grid. 
+            </p>
             <!-- https://picsum.photos/ -->
             <div class="gallery">
                 <div class="grid-img-cell">
@@ -144,6 +147,9 @@
         </section>
         <section id="navtarg3" class="section-body">
             <h2>Contact</h2>
+            <p>
+                This was created using CSS grid. 
+            </p>
 <!--
     This form and CSS(nobs-contact.css) was originally found at:
         https://webdesign.tutsplus.com/tutorials/how-to-build-web-form-layouts-with-css-grid--cms-28776
@@ -192,7 +198,7 @@
     </div>
     <!-- Page footer -->
     <footer id="page-footer" class="footer">
-        <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github/jxmot</a></h3>
+        <h3 class="footer-text"><a href="https://github.com/jxmot" target=_blank>github.com/jxmot</a></h3>
         <!-- kept in the footer to keep it anchored via CSS -->
         <button id="gototop-button" class="gototop" onclick="jumpToTop()" title="Go to top of page">&#9650;</button>
     </footer>
