set max length for "name" & "email" <input>

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -174,11 +174,11 @@
                         <form class="contact-form-body" action="#" onsubmit="return submitForm(this);">
                             <p>
                                 <label for="">Name</label>
-                                <input id="name" type="text">
+                                <input id="name" type="text" maxlength="32">
                             </p>
                             <p>
                                 <label for="">Email</label>
-                                <input id="email" type="text">
+                                <input id="email" type="text" maxlength="48">
                             </p>
                             <p class="full-width">
                                 <label for="">Write your message</label>
