fixed unmatched image selection

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -91,36 +91,36 @@
         <section id="navtarg1" class="section-body">
             <h2>Gallery</h2>
             <p>
-                This was created using CSS grid. 
+                This was created using CSS grid. Click on any image below and a "lightbox" will open.
             </p>
             <!-- https://picsum.photos/ -->
             <div class="gallery">
                 <div class="grid-img-cell lb-cursor" onclick="lb_openModal();lb_currentSlide(1)">
-                    <img class="gallery-img" src="https://picsum.photos/seed/1234/300/200">
+                    <img class="gallery-img" src="https://picsum.photos/seed/abcd/300/200">
                     <div class="text-overimg">1st</div>
                 </div>
                 <div class="grid-img-cell lb-cursor" onclick="lb_openModal();lb_currentSlide(2)">
-                    <img class="gallery-img lb-cursor" src="https://picsum.photos/seed/5678/300/200">
+                    <img class="gallery-img" src="https://picsum.photos/seed/efgh/300/200">
                     <div class="text-overimg">2nd</div>
                 </div>
                 <div class="grid-img-cell lb-cursor" onclick="lb_openModal();lb_currentSlide(3)">
-                    <img class="gallery-img" src="https://picsum.photos/seed/8765/300/200">
+                    <img class="gallery-img" src="https://picsum.photos/seed/ijkl/300/200">
                     <div class="text-overimg">3rd</div>
                 </div>
                 <div class="grid-img-cell lb-cursor" onclick="lb_openModal();lb_currentSlide(4)">
-                    <img class="gallery-img" src="https://picsum.photos/seed/4321/300/200">
+                    <img class="gallery-img" src="https://picsum.photos/seed/mnop/300/200">
                     <div class="text-overimg">4th</div>
                 </div>
                 <div class="grid-img-cell lb-cursor" onclick="lb_openModal();lb_currentSlide(5)">
-                    <img class="gallery-img" src="https://picsum.photos/seed/0000/300/200">
+                    <img class="gallery-img" src="https://picsum.photos/seed/qrst/300/200">
                     <div class="text-overimg">5th</div>
                 </div>
                 <div class="grid-img-cell lb-cursor" onclick="lb_openModal();lb_currentSlide(6)">
-                    <img class="gallery-img" src="https://picsum.photos/seed/abcd/300/200">
+                    <img class="gallery-img" src="https://picsum.photos/seed/uvwx/300/200">
                     <div class="text-overimg">6th</div>
                 </div>
                 <div class="grid-img-cell lb-cursor" onclick="lb_openModal();lb_currentSlide(7)">
-                    <img class="gallery-img" src="https://picsum.photos/seed/efgh/300/200">
+                    <img class="gallery-img" src="https://picsum.photos/seed/yzyz/300/200">
                     <div class="text-overimg">7th</div>
                 </div>
             </div>
