renamed all lb-mySlides to lb-slides

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -204,31 +204,31 @@
         <span class="lb-close lb-cursor" onclick="lb_closeModal()">X</span>
         <div class="lb-modal-content">
             <!-- images shown in modal -->
-            <div class="lb-mySlides">
+            <div class="lb-slides">
                 <div class="lb-numbertext">1 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/abcd/300/200" style="width:100%">
             </div>
-            <div class="lb-mySlides">
+            <div class="lb-slides">
                 <div class="lb-numbertext">2 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/efgh/300/200" style="width:100%">
             </div>
-            <div class="lb-mySlides">
+            <div class="lb-slides">
                 <div class="lb-numbertext">3 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/ijkl/300/200" style="width:100%">
             </div>
-            <div class="lb-mySlides">
+            <div class="lb-slides">
                 <div class="lb-numbertext">4 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/mnop/300/200" style="width:100%">
             </div>
-            <div class="lb-mySlides">
+            <div class="lb-slides">
                 <div class="lb-numbertext">5 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/qrst/300/200" style="width:100%">
             </div>
-            <div class="lb-mySlides">
+            <div class="lb-slides">
                 <div class="lb-numbertext">6 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/uvwx/300/200" style="width:100%">
             </div>
-            <div class="lb-mySlides">
+            <div class="lb-slides">
                 <div class="lb-numbertext">7 / 7</div>
                 <img class="lb-img" src="https://picsum.photos/seed/yzyz/300/200" style="width:100%">
             </div>
