renamed all lb-demo to lb-modal-thumb-select

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -242,25 +242,25 @@
             <!-- here are the modal thumbnails -->
 <!--
             <div class="lb-column">
-                <img class="lb-demo lb-cursor" src="https://picsum.photos/seed/abcd/300/200" style="width:100%" onclick="lb_currentSlide(1)" alt="seed/abcd">
+                <img class="lb-modal-thumb-select lb-cursor" src="https://picsum.photos/seed/abcd/300/200" style="width:100%" onclick="lb_currentSlide(1)" alt="seed/abcd">
             </div>
             <div class="lb-column">
-                <img class="lb-demo lb-cursor" src="https://picsum.photos/seed/efgh/300/200" style="width:100%" onclick="lb_currentSlide(2)" alt="seed/efgh">
+                <img class="lb-modal-thumb-select lb-cursor" src="https://picsum.photos/seed/efgh/300/200" style="width:100%" onclick="lb_currentSlide(2)" alt="seed/efgh">
             </div>
             <div class="lb-column">
-                <img class="lb-demo lb-cursor" src="https://picsum.photos/seed/ijkl/300/200" style="width:100%" onclick="lb_currentSlide(3)" alt="seed/ijkl">
+                <img class="lb-modal-thumb-select lb-cursor" src="https://picsum.photos/seed/ijkl/300/200" style="width:100%" onclick="lb_currentSlide(3)" alt="seed/ijkl">
             </div>
             <div class="lb-column">
-                <img class="lb-demo lb-cursor" src="https://picsum.photos/seed/mnop/300/200" style="width:100%" onclick="lb_currentSlide(4)" alt="seed/mnop">
+                <img class="lb-modal-thumb-select lb-cursor" src="https://picsum.photos/seed/mnop/300/200" style="width:100%" onclick="lb_currentSlide(4)" alt="seed/mnop">
             </div>
             <div class="lb-column">
-                <img class="lb-demo lb-cursor" src="https://picsum.photos/seed/qrst/300/200" style="width:100%" onclick="lb_currentSlide(5)" alt="seed/qrst">
+                <img class="lb-modal-thumb-select lb-cursor" src="https://picsum.photos/seed/qrst/300/200" style="width:100%" onclick="lb_currentSlide(5)" alt="seed/qrst">
             </div>
             <div class="lb-column">
-                <img class="lb-demo lb-cursor" src="https://picsum.photos/seed/uvwx/300/200" style="width:100%" onclick="lb_currentSlide(6)" alt="seed/uvwx">
+                <img class="lb-modal-thumb-select lb-cursor" src="https://picsum.photos/seed/uvwx/300/200" style="width:100%" onclick="lb_currentSlide(6)" alt="seed/uvwx">
             </div>
             <div class="lb-column">
-                <img class="lb-demo lb-cursor" src="https://picsum.photos/seed/yzyz/300/200" style="width:100%" onclick="lb_currentSlide(7)" alt="seed/yzyz">
+                <img class="lb-modal-thumb-select lb-cursor" src="https://picsum.photos/seed/yzyz/300/200" style="width:100%" onclick="lb_currentSlide(7)" alt="seed/yzyz">
             </div>
 -->
         </div>
