improved visibility of prev/next slide buttons

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -233,8 +233,8 @@
                 <img class="lb-img" src="https://picsum.photos/seed/yzyz/300/200" style="width:100%">
             </div>
             <!-- left & right buttons -->
-            <a class="lb-prev" onclick="lb_plusSlides(-1)">&#10094;</a>
-            <a class="lb-next" onclick="lb_plusSlides(1)">&#10095;</a>
+            <a class="lb-prev" onclick="lb_plusSlides(-1)">&#10094;<small>&#10094;&#10094;&#10094;</small></a>
+            <a class="lb-next" onclick="lb_plusSlides(1)"><small>&#10095;&#10095;&#10095;</small>&#10095;</a>
             <!-- caption under the image -->
             <div class="lb-caption-container">
                 <p id="lb_caption"></p>
